set overflow hidden in hover-container to fix the bug of the cursor making the window bigger

--- a/src/App.scss
+++ b/src/App.scss
@@ -23,8 +23,16 @@ body {
   top: 0;
   left: 0;
   min-height: 100vh;
-  min-width: 100vw;
-  z-index: -1;
+	min-width: 100vw;
+	overflow: hidden;
+}
+
+#right-panel-bg {
+	background-color: white;
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	z-index: -2;
 }
 
 @keyframes typeFlicker {
